examples/chapter-020/declaration/main.go
package main

import "fmt"

// error
// f := 3

func main() {
	var i, j int = 1, 2
	// ok
	k := 3
	c, python, java := true, false, "no!"

	fmt.Println(i, j, k, c, python, java)
}
